--- a/dashboard/graph.html
+++ b/dashboard/graph.html
@@ -50,8 +50,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([{"id": 3, "label": 3, "shape": "dot"}, {"id": 1, "label": 1, "shape": "dot"}, {"id": 2, "label": 2, "shape": "dot"}]);
-        edges = new vis.DataSet([{"from": 2, "to": 3}, {"from": 1, "to": 2}]);
+        nodes = new vis.DataSet([{"id": 999, "label": 999, "shape": "dot"}, {"id": 1, "label": 1, "shape": "dot"}]);
+        edges = new vis.DataSet([{"from": 1, "to": 999}]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
