--- a/robot_brain/dashboard/assets/graph_template.html
+++ b/robot_brain/dashboard/assets/graph_template.html
@@ -2,9 +2,6 @@
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.css" type="text/css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis-network.min.js"> </script>
-<center>
-<h1>{{heading}}</h1>
-</center>
 
 <!-- <link rel="stylesheet" href="../node_modules/vis/dist/vis.min.css" type="text/css" />
 <script type="text/javascript" src="../node_modules/vis/dist/vis.js"> </script>-->
@@ -22,7 +19,7 @@
             height: {{height}};
             background-color: {{bgcolor}};
             border: none;
-            margin-top: -22px;
+            /*margin-top: -22px;*/
             /*float: left;*/
         }
 
@@ -144,6 +141,8 @@
 {% if conf %}
 <div id = "config"></div>
 {% endif %}
+
+
 <script type="text/javascript">
 
     // initialize global variables.
