--- a/robot_brain/dashboard/data/hgraph_test.html
+++ b/robot_brain/dashboard/data/hgraph_test.html
@@ -2,9 +2,6 @@
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.css" type="text/css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis-network.min.js"> </script>
-<center>
-<h1></h1>
-</center>
 
 <!-- <link rel="stylesheet" href="../node_modules/vis/dist/vis.min.css" type="text/css" />
 <script type="text/javascript" src="../node_modules/vis/dist/vis.js"> </script>-->
@@ -19,10 +16,10 @@
             top: 0px;
             left: 0px;
             width: 100%;
-            height: 472px;
+            height: 450px;
             background-color: rgba(229,236,246,255);
             border: none;
-            margin-top: -22px;
+            /*margin-top: -22px;*/
             /*float: left;*/
         }
 
@@ -37,6 +34,8 @@
 
 <body>
 <div id = "mynetwork"></div>
+
+
 
 
 <script type="text/javascript">
@@ -56,7 +55,7 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([{"id": 2, "label": 2, "shape": "dot"}, {"id": 3, "label": 3, "shape": "dot"}, {"id": 4, "label": 4, "shape": "dot"}, {"id": 1, "label": 1, "shape": "dot"}, {"id": 5, "label": 5, "shape": "dot"}, {"id": 6, "label": 6, "shape": "dot"}]);
+        nodes = new vis.DataSet([{"id": 2, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 3, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 4, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 1, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 5, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 6, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}]);
         edges = new vis.DataSet([{"from": 2, "to": 5}, {"from": 2, "to": 6}, {"from": 2, "to": 3}, {"from": 4, "to": 5}]);
 
         // adding nodes and edges to the graph
