saving the hgraph and displaying it on dashbaord

--- a/robot_brain/dashboard/data/hgraph.html
+++ b/robot_brain/dashboard/data/hgraph.html
@@ -55,8 +55,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([{"id": 2, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 3, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 4, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 1, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 5, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}, {"id": 6, "label": "Node(1, confSet, the one thing\n the other thing\n another thing\\ another thing)", "shape": "dot"}]);
-        edges = new vis.DataSet([{"from": 2, "to": 5}, {"from": 2, "to": 6}, {"from": 2, "to": 3}, {"from": 4, "to": 5}]);
+        nodes = new vis.DataSet([{"id": 999, "label": "Here you can plot stuff", "shape": "dot"}, {"id": 1, "label": "Here you can plot stuff", "shape": "dot"}, {"id": 10, "label": "Here you can plot stuff", "shape": "dot"}]);
+        edges = new vis.DataSet([{"from": 1, "to": 999}, {"from": 1, "to": 10}]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
