--- a/robot_brain/dashboard/data/hgraph.html
+++ b/robot_brain/dashboard/data/hgraph.html
@@ -17,7 +17,7 @@
             left: 0px;
             width: 100%;
             height: 450px;
-            background-color: rgba(229,236,246,255);
+            background-color: rgb(230, 230, 255);
             border: none;
             /*margin-top: -22px;*/
             /*float: left;*/
