--- a/example_graph.html
+++ b/example_graph.html
@@ -50,8 +50,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([{"group": "Configuration Set Node", "id": 2, "label": 2, "shape": "dot", "title": "Configuration Set Node: 2\u003cbr\u003eobjects: ConfSetNode: 2\n containing: 0 configurations\u003cbr\u003e"}, {"group": "Change of Conf Set Node", "id": 3, "label": 3, "shape": "dot", "title": "Change of Conf Set Node: 3\u003cbr\u003eobjects: changeOfConfSetNode: 3\n containing: 0 changeOfConf\u003cbr\u003e"}, {"group": "Change of Conf Set Node", "id": 7, "label": 7, "shape": "dot", "title": "Change of Conf Set Node: 7\u003cbr\u003eobjects: changeOfConfSetNode: 7\n containing: 0 changeOfConf\u003cbr\u003e"}, {"group": "Configuration Set Node", "id": 1, "label": 1, "shape": "dot", "title": "Configuration Set Node: 1\u003cbr\u003eobjects: ConfSetNode: 1\n containing: 0 configurations\u003cbr\u003e"}, {"group": "Object Set Node", "id": 5, "label": 5, "shape": "dot", "title": "Object Set Node: 5\u003cbr\u003eobjects: ObjectSetNode: 5\n containing: 0 objects\u003cbr\u003e"}]);
-        edges = new vis.DataSet([{"arrows": "to", "from": 2, "group": "mpc", "label": "mpc", "title": "lonely node", "to": 3}, {"arrows": "to", "from": 7, "group": "pid", "label": "pid", "title": "lonely node", "to": 1}, {"arrows": "to", "from": 3, "group": "EMPPI", "label": "EMPPI", "title": "lonely node", "to": 3}, {"arrows": "to", "from": 7, "group": "mpc", "label": "mpc", "title": "lonely node", "to": 5}]);
+        nodes = new vis.DataSet([{"group": "group 1", "id": 1, "label": "node 1", "shape": "dot"}, {"group": "group 1", "id": 2, "label": "node 2", "shape": "dot"}, {"group": "group 2", "id": 3, "label": "node 3", "shape": "dot"}, {"group": "group 2", "id": 4, "label": "node 4", "shape": "dot"}]);
+        edges = new vis.DataSet([]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
