--- a/environments/delete2.html
+++ b/environments/delete2.html
@@ -55,8 +55,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([]);
-        edges = new vis.DataSet([]);
+        nodes = new vis.DataSet([{"borderWidth": 1, "borderWidthSelected": 2, "color": {"background": "#97C2FC", "border": "#2B7CE9", "highlight": {"background": "#D2E5FF", "border": "#2B7CE9"}}, "group": "nodes", "id": 0, "label": "pointRobot-vel-v7", "shape": "dot", "title": "Node: pointRobot-vel-v7\u003cbr\u003eNode identifier: 0\u003cbr\u003eStatus: node:initialised\u003cbr\u003eIn subtask: no_subtask_name\u003cbr\u003eWith Object: pointRobot-vel-v7\u003cbr\u003e2d pos = [-1.10944065  0.98195095  0.02209515]\u003cbr\u003etype = 1\u003cbr\u003e", "x": 10.0, "y": 10.0}, {"borderWidth": 1, "borderWidthSelected": 2, "color": {"background": "#97C2FC", "border": "#2B7CE9", "highlight": {"background": "#D2E5FF", "border": "#2B7CE9"}}, "group": "nodes", "id": 1, "label": " ", "shape": "dot", "x": 10.0, "y": 10.0}]);
+        edges = new vis.DataSet([{"arrows": "to", "from": 0, "label": "driving", "title": "Edge type: FeedbackEdge\u003cbr\u003eEdge identifier: 0\u003cbr\u003eObject: pointRobot-vel-v7,\u003cbr\u003eSuccess Factor: 1.0\u003cbr\u003eController: MPPI\u003cbr\u003eSystem model: drive_mppi_model\u003cbr\u003e", "to": 1, "width": 1.5}]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
